--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
