--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tremor/react": "^3.13.4",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "pigeon-maps": "^0.21.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
